<resources>
    <string name="app_name">BookMeUp</string>
    <string name="facebook_app_id" translatable="false">295044424680683</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb295044424680683</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stringHolder">Page Title</string>
    <string name="profilePage">Profile Page</string>
    <string name="allAds">All Ads</string>
    <string name="newListing">New Listing</string>
    <string name="aboutPage">About Page</string>
    <string name="version">1.0</string>
    <string name="logo_description">App Logo</string>
    <string name="test_login_button">Login as Guest</string>
    <string name="booksFetched">Books fetched</string>
    <string name="book">Book</string>
    <string name="email">email</string>
    <string name="publicProfile">public_profile</string>
    <string name="authFailed">Authentication failed.</string>
    <string name="signWithCredFailure">signInWithCredential:failure</string>
    <string name="pathImages">images</string>
    <string name="pathUsers">users</string>
    <string name="uploadSuccess">Upload successful</string>
    <string name="image">image</string>
    <string name="author">Author</string>
    <string name="book_name">Book Name</string>
    <string name="isbn">ISBN</string>
    <string name="condition">Condition</string>
    <string name="price">Price</string>
    <string name="submit">Submit</string>
    <string name="add_image">Add Image</string>
    <string name="user_name">Username</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="edit_profile">Edit profile</string>
    <string name="about">About</string>
    <string name="noData">No data added yet</string>
    <string name="noDataAnon">No preset data for Anonymous User</string>
    <string name="settings">Settings</string>
    <string name="logout_btn">Log out</string>
    <string name="about_t1">Created By Team</string>
    <string name="about_t2">LastMinSub</string>
    <string name="about_t3">Abiodun\t\t\tDavid\t\t\tElias</string>
    <string name="about_t5">BookMeUp\nIs an app designed for students to sell/buy used college or university books</string>
    <string name="about_t7">If you enjoy using our app then please dont forget to give us a 5 star rating on google play</string>
    <string name="Address">Etobicoke</string>
    <string name="Toronto">Toronto</string>
    <string name="default_country">Canada</string>
    <string name="book_image">Book\'s Image</string>
    <string name="invalid">Invalid</string>
    <string name="set_save">Save Settings</string>
    <string name="set_sw1">Light Theme</string>
    <string name="anonUser">Anonymous User</string>
    <string name="logout_title">Logout</string>
    <string name="logout_msg">Are you sure you want to log out ?</string>
    <string name="logout_yes">Yes</string>
    <string name="login_title">Hope to see you next time</string>
    <string name="logout_no">No</string>
</resources>


