<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="2dp"
    android:paddingBottom="2dp"
    android:divider="?android:dividerHorizontal"
    android:showDividers="middle"
    >
    <TextView
        android:id="@+id/mbookAuthorBookImage"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/book_image"
        />
    <ImageView
        android:id="@+id/mbookPicUrl"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:srcCompat="@drawable/com_facebook_button_like_icon_selected" />

    <TextView
        android:id="@+id/mbookAuthorTitle"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/author"
        />

    <TextView
        android:id="@+id/mbookAuthor"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        />

    <TextView
        android:id="@+id/mbookAuthorBookPrice"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/price"
        />
    <TextView
        android:id="@+id/mbookPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/mbookAuthorBookName"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/book_name"
        />
    <TextView
        android:id="@+id/mbookName"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        />
</LinearLayout>